--- a/www/index.html
+++ b/www/index.html
@@ -33,12 +33,25 @@
     <script src="js/app.js"></script>
   </head>
   <body ng-app="starter">
-
     <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
+      <ion-header-bar class="bar-dark" align-title="center">
+        <h2 class="title">Artist List</h2>
       </ion-header-bar>
-      <ion-content>
+      <div class="bar bar-subheader item-input-inset bar-light">
+        <label class="item-input-wrapper">
+        <i class="icon ion-search placeholder-icon"></i>
+        <input type="search" ng-model="query" placeholder="Search">
+        </label>
+      </div>
+      <ion-content ng-controller="ListController" class="has-subheader">
+        <ion-list>
+          <ion-item ng-repeat="item in artists | filter: query" class="item-thumbnail-left item-text-wrap">
+            <img src="img/{{item.shortname}}_tn.jpg" alt="{{item.name}}photo">
+            <h2>{{item.name}}</h2>
+            <h3>{{item.reknown}}</h3>
+            <p>{{item.bio | limitTo: 100}}{{ item.bio.length > 150 ? '&hellip;' : '' }}</p>
+          </ion-item>
+        </ion-list>
       </ion-content>
     </ion-pane>
   </body>
