--- a/www/index.html
+++ b/www/index.html
@@ -33,9 +33,11 @@
     <script src="js/app.js"></script>
   </head>
   <body ng-app="starter">
-    <ion-pane>
+    <ion-pane ng-controller="ListController">
       <ion-header-bar class="bar-dark" align-title="center">
+        <button class="button button icon ion-minus-circle" ng-click="data.showReorder = !data.showReorder"></button>
         <h2 class="title">Artist List</h2>
+        <button class="button button icon ion-drag" ng-click="data.showDelete = !data.showDelete; data.showReorder = false;"></button>
       </ion-header-bar>
       <div class="bar bar-subheader item-input-inset bar-light">
         <label class="item-input-wrapper">
@@ -43,13 +45,15 @@
         <input type="search" ng-model="query" placeholder="Search">
         </label>
       </div>
-      <ion-content ng-controller="ListController" class="has-subheader">
-        <ion-list>
+      <ion-content class="has-subheader">
+        <ion-list show-reorder="data.showReorder">
           <ion-item ng-repeat="item in artists | filter: query" class="item-thumbnail-left item-text-wrap">
             <img src="img/{{item.shortname}}_tn.jpg" alt="{{item.name}}photo">
             <h2>{{item.name}}</h2>
             <h3>{{item.reknown}}</h3>
             <p>{{item.bio | limitTo: 100}}{{ item.bio.length > 150 ? '&hellip;' : '' }}</p>
+            <ion-reorder-button class="ion-drag" on-reorder="moveItem(item,$fromIndex,$toIndex)">
+            </ion-reorder-button>
           </ion-item>
         </ion-list>
       </ion-content>
